# clinical-rag-evaluation-framework

./: .dockerignore  .gitignore  Dockerfile  README.md  compare_embeddings.py  config.py  eval_queries.json  evaluate.py  ingest.py  pyproject.toml  query.py  requirements.txt
.github/workflows/: tests.yml
results/: embedding_comparison.csv  embedding_comparison.json
src/clinical_rag_eval/: __init__.py  api.py  config.py  evaluate.py  ingest.py  langchain_retriever.py  query.py  rerank.py
src/clinical_rag_evaluation_framework.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_api.py  test_text_processing.py
